# diagnostics

./: .clang-format  CMakeLists.txt
cmake/: DiagnosticsConfig.cmake.in  TargetWarnings.cmake
include/diagnostics/: ConsoleDiagnosticsConsumer.h  Contracts.h  Diagnostic.h  DiagnosticLocation.h  DiagnosticSnippet.h  DiagnosticsBuilder.h  DiagnosticsConsumer.h  DiagnosticsReporter.h  DisableContracts.h  EnableContracts.h  FileReporter.h  InMemoryReporter.h  LineAndColumn.h  LineColumnDecoder.h  SourceReporter.h  StandaloneSnippet.h  StandaloneSnippetBuilder.h
include/diagnostics/support/: LineColumnDecoder.h  StandaloneSnippet.h  StandaloneSnippetBuilder.h
src/: CMakeLists.txt  ConsoleDiagnosticsConsumer.cc  Diagnostic.cc  DiagnosticLocation.cc  DiagnosticsBuilder.cc  DiagnosticsReporter.cc  FileReporter.cc  InMemoryReporter.cc  LineColumnDecoder.cc  SourceReporter.cc  StandaloneSnippet.cc  StandaloneSnippetBuilder.cc
src/implementation/: Utf8LineColumnDecoder.cc  Utf8LineColumnDecoder.h
src/support/: LineColumnDecoder.cc  StandaloneSnippet.cc  StandaloneSnippetBuilder.cc
src/support/implementation/: Utf8LineColumnDecoder.cc  Utf8LineColumnDecoder.h
test/: CMakeLists.txt
test/unit/: CMakeLists.txt  LineColumnDecoderTest.cc  StandaloneSnippetBuilderTest.cc  Utf8LineColumnDecoderTest.cc
